tests/snapshots/snapshot_tests__snapshot_cargo_error_output.snap
---
source: strip-ansi/tests/snapshot_tests.rs
expression: strip_to_string(input)
---
error[E0308]: mismatched types
--> src/main.rs:10:5
|
10 |     42
|     ^^ expected `&str`, found integer
